2011-07-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fixes constant notice in
	this view.
	
	Bug: #3315679	

2011-07-12  Sergio Martin <sergio.martin@artica.es>

	* operation/snmpconsole/snmp_view.php: Fixed the trap generator
	to be enabled ever 

2011-07-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_events.php
	include/functions.php
	operation/agentes/estado_monitores.php
	operation/agentes/networkmap.php
	godmode/modules/manage_nc_groups.php: Fixes in this views in order 
	to have compatibility with IE.
	
	Bug: #3274423
	
2011-07-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed installation over a new database.

2011-07-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Merged from 3.2 branch. Fixed
	  custom SQL reports.

2011-07-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/error_authconfig.php
	godmode/db/db_info.php
	godmode/db/db_purge.php
	godmode/setup/file_manager.php: Improvements in css style.

2011-07-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_visual_map.php
	include/ajax/visual_console_builder.ajax.php
	godmode/users/configure_user.php
	godmode/reporting/visual_console_builder.editor.js
	godmode/reporting/visual_console_builder.editor.php
	godmode/reporting/visual_console_builder.constans.php: Added min,
	max and avg process to simple value items in visual maps.
	
	Pending tasks: #3014709

2011-07-11  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/estado_agente.php,
	godmode/agentes/modificar_agente.php: Improved group selection, it
	allows group recursion.

2011-07-08 Miguel de Dios  <miguel.dedios@artica.es>

	* images/minimap_open_arrow.png, images/minimap_close_arrow.png: added the
	image files for the network enterprise viewer.

2011-07-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  include/functions_config.php,